<resources>
    <string name="app_name">TenantApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="month_start">Month Start</string>
    <string name="amount_due">Amount Due</string>
    <string name="month_end">Month End</string>
    <string name="payment_date">Payment Date</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="_0000">0000</string>
    <string name="_3000">3000</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="_31_jan">31 Jan</string>
    <string name="_01_jan">01 Jan</string>
    <string name="start_month">start month</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="name">Name</string>
    <string name="phone_number">phone number</string>
    <string name="close_x">Close X</string>
    <string name="delete">Delete</string>
    <string name="string_delete" />
    <string name="string_string_delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view_pdf">View Pdf</string>
    <string name="sign_up">Register</string>
    <string name="back">Back</string>
    <string name="tenant_record">Tenant Record</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bact_to_sign_in_page">Bact to Sign In Page</string>
    <string name="subtitle">Create an account to access our services.</string>
    <string name="title_registration">Registration</string>
    <string name="title_login">Login</string>
    <string name="subtitle_login">Enter your credentials to access our services.</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="see_tenant_list">See Tenant List</string>
    <string name="help">Help</string>
    <string name="sign_out_logo">Sign Out logo</string>
    <string name="sign_out">Sign Out</string>
    <string name="fetch_database">Fetch Data</string>
    <string name="save_database">Save Data</string>
    <string name="exit">Exit</string>
    <string name="warning">Please ensure that you are connected to the internet, otherwise PDF and database uploads and downloads may fail.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="from">From</string>
    <string name="paid">Paid</string>
    <string name="rent">Rent</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="payment_history">Payment History</string>
    <string name="add_rent">Add Rent</string>
    <string name="balance">Balance</string>
    <string name="call">Call</string>
</resources>