<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    tools:context=".fragments.HomeFragment"
    android:background="@drawable/activity_background">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtIdTwo3"
        android:layout_width="307dp"
        android:layout_height="335dp"
        android:fontFamily="cursive"
        android:padding="30dp"
        android:text="@string/tenant_record"
        android:textColor="#C62828"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/tenant_listbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="cursive"
        android:text="@string/see_tenant_list"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdTwo3"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/add_tenantbtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:fontFamily="cursive"
        android:text="@string/add_tenant"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tenant_listbtn"
        app:layout_constraintVertical_bias="0.110000014" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sign_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stateListAnimator="@anim/my_scale_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <ImageView
            android:layout_width="46dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_lock_power_off"
            android:contentDescription="@string/sign_out_logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/sign_out"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stateListAnimator="@anim/my_scale_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <ImageView
            android:layout_width="46dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_lock_power_off"
            android:contentDescription="@string/sign_out_logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/fetch_data_btn"
        android:layout_width="125sp"
        android:layout_height="70dp"
        android:backgroundTint="#F3DC08"
        android:fontFamily="cursive"
        android:text="@string/fetch_database"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/save_data_btn"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/close_green"
        android:fontFamily="cursive"
        android:text="@string/save_database"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/helpbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textAllCaps="false"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_tenantbtn"
        app:layout_constraintVertical_bias="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>