<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment"
    android:background="@drawable/activity_background">

    <TextView
        android:id="@+id/txtIdTwo"
        android:layout_width="307dp"
        android:layout_height="250sp"
        android:fontFamily="cursive"
        android:padding="30dp"
        android:text="@string/tenant_record"
        android:textColor="#C62828"
        android:textColorHighlight="#01579B"
        android:textColorHint="#311B92"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_compat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdTwo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_registration"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="cursive"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/subtitle"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="cursive"
            android:textSize="20sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_compat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmailAddress2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textVisiblePassword"
            android:textColorHint="#616161" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword2"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/backbtn_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stateListAnimator="@anim/my_scale_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

        <ImageView
            android:id="@+id/backimg3"
            android:layout_width="46dp"
            android:layout_height="42dp"
            android:background="@drawable/backarrow"
            android:contentDescription="@string/bact_to_sign_in_page" />

        <TextView
            android:id="@+id/backtxt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:fontFamily="cursive"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>