<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_tenantbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:backgroundTint="@color/silver"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/table_item1name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center" />

    <TextView
        android:id="@+id/table_item2phoneno"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center" />

    <TextView
        android:id="@+id/table_item3address"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_tenant_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_tenant_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:backgroundTint="@color/close_red"
            android:text="@string/string_string_delete"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_pdf_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="25sp"
            android:gravity="end"
            android:backgroundTint="@color/close_green"
            android:text="@string/view_pdf"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>